# leagueLogik

./: .gitignore  CLAUDE.md
.claude/agents/: architecture-validator.md  code-reviewer.md  database-architect.md  fastapi-backend-specialist.md  frontend-react-specialist.md
backend/: .env.example  alembic.ini  pyproject.toml  test_password_focused.py  test_password_security.py  test_validation_rules.py
backend/alembic/: env.py
backend/alembic/versions/: 46d1b9a8c4ee_initial_empty_migration.py  ae2906705672_create_users_table_with_member_.py  c70936a0e551_add_account_lockout_fields_to_users_.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  api.py  auth.py
backend/app/core/: __init__.py  settings.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  auth.py
backend/app/utils/: __init__.py  auth.py  seeding.py
backend/backend/: pyproject.toml
backend/scripts/: seed_admin.py
backend/tests/: __init__.py  test_role_system.py  test_seeding.py
docs/: development_roadmap.md
docs/agents/: README.md  registry.md
docs/agents/core/: architecture_agent.md  database_agent.md
docs/agents/templates/: agent_definition.md
docs/agents/workflows/: communication_protocol.md  coordination_strategy.md  usage_guide.md
docs/architecture/: role_based_access_patterns.md
docs/templates/: plan_reevaluation.md  post_task_validation.md  pre_task_evaluation.md  subagent_task.md  workflow_checklist.md
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.vitest.json  vitest.config.ts
frontend/src/: App.tsx  test-setup.ts  test-utils.tsx
frontend/src/__tests__/: test-utils.test.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: AdminDashboard.tsx  LoginPage.tsx  (+1 more)
(+8 files in other folders)
